fix: no longer rebuilding submodules on every make

--- a/quack/cli/Makefile
+++ b/quack/cli/Makefile
@@ -35,41 +35,49 @@ submodules: $(CURL_DIR)/.git $(MBEDTLS_DIR)/.git
 
 .PHONY: submodules $(CURL_DIR) $(MBEDTLS_DIR)
 
-# --- Build mbedTLS (static) ---
+# --- Build mbedTLS (only if missing) ---
 $(MBEDTLS_INSTALL)/lib/libmbedtls.a: submodules
-	@echo "==> Building mbedTLS (static)..."
-	mkdir -p $(MBEDTLS_BUILD)
-	cd $(MBEDTLS_BUILD) && cmake ../../$(MBEDTLS_DIR) \
-		-DCMAKE_BUILD_TYPE=Release \
-		-DBUILD_SHARED_LIBS=OFF \
-		-DENABLE_PROGRAMS=OFF \
-		-DENABLE_TESTING=OFF \
-		-DCMAKE_POSITION_INDEPENDENT_CODE=ON \
-		-DCMAKE_INSTALL_PREFIX=$(abspath $(MBEDTLS_INSTALL))
-	$(MAKE) -C $(MBEDTLS_BUILD)
-	$(MAKE) -C $(MBEDTLS_BUILD) install
+	@if [ ! -f "$@" ]; then \
+		echo "==> Building mbedTLS (static)..."; \
+		mkdir -p $(MBEDTLS_BUILD) $(MBEDTLS_INSTALL); \
+		cd $(MBEDTLS_BUILD) && cmake ../../$(MBEDTLS_DIR) \
+			-DCMAKE_BUILD_TYPE=Release \
+			-DBUILD_SHARED_LIBS=OFF \
+			-DENABLE_PROGRAMS=OFF \
+			-DENABLE_TESTING=OFF \
+			-DCMAKE_POSITION_INDEPENDENT_CODE=ON \
+			-DCMAKE_INSTALL_PREFIX=$(abspath $(MBEDTLS_INSTALL)) && \
+		$(MAKE) && $(MAKE) install; \
+	else \
+		echo "==> Skipping mbedTLS (already built)"; \
+	fi
 
-# --- Build libcurl (static, HTTPS via mbedTLS) ---
+
+# --- Build libcurl (only if missing) ---
 $(CURL_INSTALL)/lib/libcurl.a: submodules $(MBEDTLS_INSTALL)/lib/libmbedtls.a
-	@echo "==> Building libcurl (static, HTTPS via mbedTLS)..."
-	mkdir -p $(CURL_BUILD)
-	cd $(CURL_BUILD) && cmake ../../$(CURL_DIR) \
-		-DCMAKE_BUILD_TYPE=Release \
-		-DBUILD_SHARED_LIBS=OFF \
-		-DCURL_STATICLIB=ON \
-		-DBUILD_CURL_EXE=OFF \
-		-DCURL_USE_MBEDTLS=ON \
-		-DCURL_USE_LIBPSL=OFF \
-		-DCURL_ZLIB=OFF \
-		-DCURL_BROTLI=OFF \
-		-DCURL_ZSTD=OFF \
-		-DCURL_USE_LIBSSH2=OFF \
-		-DCURL_DISABLE_LDAP=ON \
-		-DCURL_DISABLE_LDAPS=ON \
-		-DCMAKE_PREFIX_PATH=$(abspath $(MBEDTLS_INSTALL)) \
-		-DCMAKE_INSTALL_PREFIX=$(abspath $(CURL_INSTALL))
-	$(MAKE) -C $(CURL_BUILD)
-	$(MAKE) -C $(CURL_BUILD) install
+	@if [ ! -f "$@" ]; then \
+		echo "==> Building libcurl (static, HTTPS via mbedTLS)..."; \
+		mkdir -p $(CURL_BUILD) $(CURL_INSTALL); \
+		cd $(CURL_BUILD) && cmake ../../$(CURL_DIR) \
+			-DCMAKE_BUILD_TYPE=Release \
+			-DBUILD_SHARED_LIBS=OFF \
+			-DCURL_STATICLIB=ON \
+			-DBUILD_CURL_EXE=OFF \
+			-DCURL_USE_MBEDTLS=ON \
+			-DCURL_USE_LIBPSL=OFF \
+			-DCURL_ZLIB=OFF \
+			-DCURL_BROTLI=OFF \
+			-DCURL_ZSTD=OFF \
+			-DCURL_USE_LIBSSH2=OFF \
+			-DCURL_DISABLE_LDAP=ON \
+			-DCURL_DISABLE_LDAPS=ON \
+			-DCMAKE_PREFIX_PATH=$(abspath $(MBEDTLS_INSTALL)) \
+			-DCMAKE_INSTALL_PREFIX=$(abspath $(CURL_INSTALL)) && \
+		$(MAKE) && $(MAKE) install; \
+	else \
+		echo "==> Skipping libcurl (already built)"; \
+	fi
+
 
 # --- Build your CLI binary ---
 $(OUTPUT_BIN): $(SRC) $(CURL_INSTALL)/lib/libcurl.a
@@ -78,6 +86,13 @@ $(OUTPUT_BIN): $(SRC) $(CURL_INSTALL)/lib/libcurl.a
 	$(CC) $(SRC) $(CFLAGS) $(LDFLAGS) -o $(BUILD_DIR)/$(TARGET)
 	cp $(BUILD_DIR)/$(TARGET) $(OUTPUT_BIN)
 	@echo "==> Built $(OUTPUT_BIN)"
+
+# --- Force rebuild both libraries (manual) ---
+.PHONY: rebuild-libs
+rebuild-libs:
+	@echo "==> Forcing rebuild of mbedTLS and libcurl..."
+	rm -rf $(MBEDTLS_BUILD) $(MBEDTLS_INSTALL) $(CURL_BUILD) $(CURL_INSTALL)
+	$(MAKE) $(CURL_INSTALL)/lib/libcurl.a
 
 # --- Clean targets ---
 clean:
