--- a/quack/cli/Makefile
+++ b/quack/cli/Makefile
@@ -1,9 +1,9 @@
 # === Build settings ===
-TARGET = quack
-SRC = cli.c
+TARGET          = quack
+SRC             = cli.c
 
 # === Paths ===
-ROOT_DIR 				= $(abspath $(CURDIR)/..)
+ROOT_DIR        = $(abspath $(CURDIR)/..)
 CURL_DIR        = external/curl
 MBEDTLS_DIR     = external/mbedtls
 BUILD_DIR       = build
@@ -13,117 +13,106 @@ CURL_BUILD      = $(BUILD_DIR)/curl
 CURL_INSTALL    = $(BUILD_DIR)/curl_install
 OUTPUT_BIN      = $(ROOT_DIR)/$(TARGET)
 
-# === Compiler / Linker ===
-CFLAGS  = -I$(CURL_INSTALL)/include
-LDFLAGS = -L$(CURL_INSTALL)/lib -lcurl \
-           -L$(MBEDTLS_INSTALL)/lib -lmbedtls -lmbedx509 -lmbedcrypto
+# === System detection ===
+UNAME_S := $(shell uname -s)
+ifeq ($(UNAME_S),Darwin)
+	LDFLAGS += -framework CoreFoundation -framework SystemConfiguration
+endif
+
+# === System build flags (uses system curl only) ===
+SYS_CFLAGS  = -I/usr/include -I/usr/local/include -I/opt/homebrew/include
+SYS_LDFLAGS = -L/usr/lib -L/usr/local/lib -L/opt/homebrew/lib -lcurl
+
+# === Portable build flags (uses vendored curl + mbedTLS) ===
+PORTABLE_CFLAGS  = -I$(CURL_INSTALL)/include
+PORTABLE_LDFLAGS = -L$(CURL_INSTALL)/lib -lcurl \
+                   -L$(MBEDTLS_INSTALL)/lib -lmbedtls -lmbedx509 -lmbedcrypto
 
 # === Parallel build settings ===
 JOBS := $(shell nproc 2>/dev/null || sysctl -n hw.ncpu 2>/dev/null || echo 4)
 MAKEFLAGS += -j$(JOBS)
 
-# === Default target ===
-all: submodules $(OUTPUT_BIN)
+# === Targets ===
+.PHONY: all portable submodules rebuild-libs clean help
 
-HAS_CURL := $(shell [ -f /usr/lib/libcurl.dylib ] && echo 1 || echo 0)
-HAS_MBEDTLS := $(shell [ -f /usr/local/lib/libmbedtls.a ] && echo 1 || echo 0)
-UNAME_S := $(shell uname -s)
-ifeq ($(UNAME_S),Darwin)
-	LDFLAGS += -framework CoreFoundation -framework SystemConfiguration
-endif
-ifeq ($(HAS_CURL),1)
-	CFLAGS  += -I/usr/include
-	LDFLAGS += -L/usr/lib -lcurl
-else
-	CFLAGS  += -I$(CURL_INSTALL)/include
-	LDFLAGS += -L$(CURL_INSTALL)/lib -lcurl
-endif
+# --- Default: system build ---
+all: $(OUTPUT_BIN)
 
-ifeq ($(HAS_MBEDTLS),1)
-	LDFLAGS += -L/usr/local/lib -lmbedtls -lmbedx509 -lmbedcrypto
-else
-	LDFLAGS += -L$(MBEDTLS_INSTALL)/lib -lmbedtls -lmbedx509 -lmbedcrypto
-endif
-
-# --- Ensure submodules are initialized and up to date ---
-submodules:
-	@if [ "$(HAS_CURL)" = "1" ] && [ "$(HAS_MBEDTLS)" = "1" ]; then \
-		echo "==> System libraries found (libcurl + mbedTLS); skipping submodule fetch."; \
-	else \
-		echo "==> Fetching and updating submodules..."; \
-		git -C $(ROOT_DIR) submodule sync --recursive; \
-		git -C $(ROOT_DIR) submodule update --init --recursive --remote; \
-		echo "==> Submodules ready."; \
-	fi
-
-.PHONY: submodules
-
-# --- Build mbedTLS (only if missing) ---
-$(MBEDTLS_INSTALL)/lib/libmbedtls.a: submodules
-	@if [ ! -f "$@" ]; then \
-		echo "==> Building mbedTLS (static)..."; \
-		mkdir -p $(MBEDTLS_BUILD) $(MBEDTLS_INSTALL); \
-		cd $(MBEDTLS_BUILD) && cmake ../../$(MBEDTLS_DIR) \
-			-DCMAKE_BUILD_TYPE=Release \
-			-DBUILD_SHARED_LIBS=OFF \
-			-DENABLE_PROGRAMS=OFF \
-			-DENABLE_TESTING=OFF \
-			-DCMAKE_POSITION_INDEPENDENT_CODE=ON \
-			-DCMAKE_INSTALL_PREFIX=$(abspath $(MBEDTLS_INSTALL)) && \
-		$(MAKE) && $(MAKE) install; \
-	else \
-		echo "==> Skipping mbedTLS (already built)"; \
-	fi
-
-
-# --- Build libcurl (only if missing) ---
-$(CURL_INSTALL)/lib/libcurl.a: submodules $(MBEDTLS_INSTALL)/lib/libmbedtls.a
-	@if [ ! -f "$@" ]; then \
-		echo "==> Building libcurl (static, HTTPS via mbedTLS)..."; \
-		mkdir -p $(CURL_BUILD) $(CURL_INSTALL); \
-		cd $(CURL_BUILD) && cmake ../../$(CURL_DIR) \
-			-DCMAKE_BUILD_TYPE=Release \
-			-DBUILD_SHARED_LIBS=OFF \
-			-DCURL_STATICLIB=ON \
-			-DBUILD_CURL_EXE=OFF \
-			-DCURL_USE_MBEDTLS=ON \
-			-DCURL_USE_LIBPSL=OFF \
-			-DCURL_ZLIB=OFF \
-			-DCURL_BROTLI=OFF \
-			-DCURL_ZSTD=OFF \
-			-DCURL_USE_LIBSSH2=OFF \
-			-DCURL_DISABLE_LDAP=ON \
-			-DCURL_DISABLE_LDAPS=ON \
-			-DCMAKE_PREFIX_PATH=$(abspath $(MBEDTLS_INSTALL)) \
-			-DCMAKE_INSTALL_PREFIX=$(abspath $(CURL_INSTALL)) && \
-		$(MAKE) && $(MAKE) install; \
-	else \
-		echo "==> Skipping libcurl (already built)"; \
-	fi
-
-
-# --- Build your CLI binary ---
-# --- Build your CLI binary ---
-ifeq ($(HAS_CURL),1)
 $(OUTPUT_BIN): $(SRC)
-else
-$(OUTPUT_BIN): $(SRC) $(CURL_INSTALL)/lib/libcurl.a
-endif
-	@echo "==> Compiling $(TARGET)..."
+	@echo "==> Compiling $(TARGET) (system build)..."
 	mkdir -p $(BUILD_DIR)
-	$(CC) $(SRC) $(CFLAGS) $(LDFLAGS) -o $(BUILD_DIR)/$(TARGET)
+	$(CC) $(SRC) $(SYS_CFLAGS) $(SYS_LDFLAGS) -o $(BUILD_DIR)/$(TARGET)
 	cp $(BUILD_DIR)/$(TARGET) $(OUTPUT_BIN)
 	@echo "==> Built $(OUTPUT_BIN)"
 
-# --- Force rebuild both libraries (manual) ---
-.PHONY: rebuild-libs
+# --- Portable build: fetch + build all dependencies ---
+portable: submodules $(BUILD_DIR)/$(TARGET)-portable
+	@cp $(BUILD_DIR)/$(TARGET)-portable $(OUTPUT_BIN)
+	@echo "==> Portable binary ready at $(OUTPUT_BIN)"
+
+$(BUILD_DIR)/$(TARGET)-portable: $(SRC) $(CURL_INSTALL)/lib/libcurl.a
+	@echo "==> Compiling $(TARGET) (portable build)..."
+	mkdir -p $(BUILD_DIR)
+	$(CC) $(SRC) $(PORTABLE_CFLAGS) $(PORTABLE_LDFLAGS) -o $@
+	@echo "==> Built $@"
+
+# --- Fetch and update submodules ---
+submodules:
+	@echo "==> Fetching and updating submodules..."
+	git -C $(ROOT_DIR) submodule sync --recursive
+	git -C $(ROOT_DIR) submodule update --init --recursive --remote
+	@echo "==> Submodules ready."
+
+# --- Build mbedTLS ---
+$(MBEDTLS_INSTALL)/lib/libmbedtls.a:
+	@echo "==> Building mbedTLS (static)..."
+	mkdir -p $(MBEDTLS_BUILD) $(MBEDTLS_INSTALL)
+	cd $(MBEDTLS_BUILD) && cmake ../../$(MBEDTLS_DIR) \
+		-DCMAKE_BUILD_TYPE=Release \
+		-DBUILD_SHARED_LIBS=OFF \
+		-DENABLE_PROGRAMS=OFF \
+		-DENABLE_TESTING=OFF \
+		-DCMAKE_POSITION_INDEPENDENT_CODE=ON \
+		-DCMAKE_INSTALL_PREFIX=$(abspath $(MBEDTLS_INSTALL))
+	$(MAKE) -C $(MBEDTLS_BUILD) install
+
+# --- Build libcurl ---
+$(CURL_INSTALL)/lib/libcurl.a: $(MBEDTLS_INSTALL)/lib/libmbedtls.a
+	@echo "==> Building libcurl (static, HTTPS via mbedTLS)..."
+	mkdir -p $(CURL_BUILD) $(CURL_INSTALL)
+	cd $(CURL_BUILD) && cmake ../../$(CURL_DIR) \
+		-DCMAKE_BUILD_TYPE=Release \
+		-DBUILD_SHARED_LIBS=OFF \
+		-DCURL_STATICLIB=ON \
+		-DBUILD_CURL_EXE=OFF \
+		-DCURL_USE_MBEDTLS=ON \
+		-DCURL_USE_LIBPSL=OFF \
+		-DCURL_ZLIB=OFF \
+		-DCURL_BROTLI=OFF \
+		-DCURL_ZSTD=OFF \
+		-DCURL_USE_LIBSSH2=OFF \
+		-DCURL_DISABLE_LDAP=ON \
+		-DCURL_DISABLE_LDAPS=ON \
+		-DCMAKE_PREFIX_PATH=$(abspath $(MBEDTLS_INSTALL)) \
+		-DCMAKE_INSTALL_PREFIX=$(abspath $(CURL_INSTALL))
+	$(MAKE) -C $(CURL_BUILD) install
+
+# --- Force rebuild both libraries ---
 rebuild-libs:
 	@echo "==> Forcing rebuild of mbedTLS and libcurl..."
 	rm -rf $(MBEDTLS_BUILD) $(MBEDTLS_INSTALL) $(CURL_BUILD) $(CURL_INSTALL)
-	$(MAKE) $(CURL_INSTALL)/lib/libcurl.a
+	$(MAKE) portable
 
-# --- Clean targets ---
+# --- Clean build artifacts ---
 clean:
 	@echo "==> Cleaning build directory..."
 	rm -rf $(BUILD_DIR)
 	rm -f $(OUTPUT_BIN)
+
+# --- Help ---
+help:
+	@echo "Available targets:"
+	@echo "  make            - Build using system libcurl (no mbedTLS required)"
+	@echo "  make portable   - Fetch and build static vendored curl + mbedTLS"
+	@echo "  make clean      - Remove build artifacts"
+	@echo "  make rebuild-libs - Force rebuild of vendored libs"
